tried to fix education timeline alignment

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,15 @@ a, a:hover, a:active, a:visited {
     position: relative;
     margin: 20px 0;
     padding: 20px 0;
+    width: 100%; 
+    max-width: 800px;
+}
+.roadmap-container{
+    display: flex;
+    justify-content: center; 
+    align-items: center; margin-left: 25%;
+    width: 100%;
+    height: 100%;
 }
 
 .roadmap::before {
